--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/json-schema": "^7.0.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/semver": "^7.7.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^5.2.0",
